# OmniAgent-BI

./: README.md  schema.prisma
Frontend/: package.json  pnpm-lock.yaml
Frontend/omniagent-bi/: index.html  package.json  pnpm-lock.yaml
Frontend/omniagent-bi/src/: App.tsx  index.css  utils.ts
Frontend/omniagent-bi/src/components/: LandingPage.tsx  Navbar.tsx  dashboard.tsx  login.tsx  sidebar.tsx  signin.tsx
Frontend/omniagent-bi/src/store/: store.tsx
backend/: .modal.toml  check_volume.py  logger.py  main.py  pyproject.toml  test_inference.py
backend/src/: utils.py
backend/src/.adk/: session.db
backend/src/agents/: agent.py  utility_agents.py
backend/src/agents/sub_agents/: dataset_analyzer.py  eda.py  feature_engineering.py  inference.py  model_analyzer_agent.py  training.py
backend/src/core/: state.py  tools.py
backend/src/workflow/: inference_workflow.py  retraining.py  training_workflow.py
server/: package.json  pnpm-lock.yaml  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20260617063043_init/: migration.sql
server/prisma/migrations/20260618035434_optimized/: migration.sql
server/prisma/migrations/20260619110225_added_istraining/: migration.sql
server/prisma/migrations/20260623100914_major_changes/: migration.sql
server/prisma/migrations/20260623105746_added_userid_in_dataset_columns/: migration.sql
server/src/: db.ts  index.ts
server/src/routes/: chats.ts  dataset.ts  get-datasets.ts  get-file.ts  login.ts  prediction.ts  signin.ts  train.ts  user.ts
(+1 files in other folders)
