[project]
name = "backend"
version = "0.1.0"
description = "AI agent used to create models and generate curves for the frontend according to the data provided by the user."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "ipython>=9.14.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-mistralai>=1.1.4",
    "langgraph>=1.2.2",
    "litellm>=1.86.2",
    "modal>=1.4.3",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.48.0",
]
